UI and bug fix
Fixed yellow color for fumbles (hard to read); fixed opposite heal
showing adjacent instead

--- a/DCC_Tabbed_Sheet/DCC_Tabbed_Sheet.css
+++ b/DCC_Tabbed_Sheet/DCC_Tabbed_Sheet.css
@@ -147,7 +147,7 @@
     -moz-box-sizing: border-box; 
     box-sizing: border-box;   
 
-    color: yellow; 
+    color: mediumvioletred; 
     font-weight: bold; 
     font-size: 1.2em;
     text-align: center;
@@ -168,7 +168,7 @@
     -moz-box-sizing: border-box; 
     box-sizing: border-box;   
 
-    color: yellow; 
+    color: mediumvioletred; 
     font-weight: bold; 
     font-size: 1.2em;
 }
